# openai_wrapper

./: .env.local  .gitignore  Dollar Plan.xmind  Socical-Video-Generator.xmind  pyproject.toml  requirements.txt  setup.cfg
common/: logging_define.py  openai_endpoint.py  openai_model_define.py  test_token_calc.py
doc/: note.md
doc/mindmap/: translate-service-layer.drawio
mindmap/: GEN AI Application by 1st Dec 2023.xmind
openai_api/: .env.local  api_key_loading.py  openai_api.py  requirements.txt  test_openai_api.py  text_generation_api.py
speech_to_text/: speech_define.py  wrapper.py
src/openaiwrapper/common/: api_key_loading.py  logging_define.py  openai_endpoint.py  openai_model_define.py
src/openaiwrapper/speech_to_text/: speech_define.py  wrapper.py
src/openaiwrapper/text_generation/: chat_completion.py  chat_completion_stream.py
src/openaiwrapper/text_to_voice/: audio_define.py  wrapper.py
tests/: test_chat_completions_deeplearningai.py  test_chat_completions_openaidoc.py  test_openai_api.py  test_speech_to_text.py  test_text_to_voice.py
text_generation/: api_key_loading.py  text_generation_api.py
text_to_voice/: constant.py  wrapper.py
token_calc/: note.md  token_calc.py
token_calc/py/: notes.md  requirements.txt  token_calc.py
